Flickering of submenu on page reload Fixes #2033 (#2034)

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
@@ -295,7 +295,7 @@ body {
             overflow: hidden;
         }
 
-        > li.active {
+        > li.visible {
             overflow: visible;
             width: $left-navigation-width-when-compact + $left-navigation-width;
         }
